# oss-repo-template

./: index.md
labs/lab-01/: report.md
labs/lab-02/: README.md  report.md
labs/lab-03/: report.md
labs/lab-04/: report.md
labs/lab-05/: CMakeLists.txt  report.md
labs/lab-05/program/: CMakeLists.txt  Makefile  Makefile2
labs/lab-05/step2/: CMakeLists.txt
labs/lab-05/step4/: output.txt
labs/lab-06/: otherexample.py  otherexample2.py  otherexample3.py  output.txt  report.md
labs/lab-08/: report.md
labs/lab-09/: Dockerfile  report.md
labs/lab-10/: report.md
labs/lab-11/: ch2.py  greyscale.py  report.md
